# Benchmark

./: .env  .gitignore  architecture.md  pyproject.toml
scripts/: train.py
scripts/dataset/: __init__.py  adult_census.py  dataset.py
scripts/integrate/: props.py  registry_model.py
scripts/model/: __init__.py  abstract_trainer.py  props.py  registry.py  runtime_params.py  sklearn_compatible_mixin.py  trainer.py  xgboost.py
scripts/preprocess/: __init__.py  default_preprocessor.py  preprocessor.py  registry.py
scripts/trainer/: __init__.py  abstract_trainer.py  registry.py  tf_trainer.py  trainer.py  xgboost_trainer.py
tests/: test_dataset.py
