[tool.poetry]
name = "tabular-benchmarks"
version = "0.1.0"
description = ""
authors = ["elda27 <kaz.birdstick@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.5"
numpy = "1.19.5"
tensorflow = "^2.5.0"
tabnet = "^0.1.6"
xgboost = "^1.4.2"
lightgbm = "^3.2.1"
catboost = "^0.26"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
kaggle = "^1.5.12"
requests = "^2.25.1"
autopep8 = "^1.5.7"
flakehell = "^0.9.0"
pytest = "^6.2.4"
poethepoet = "^0.10.0"
flake8 = "^3.9.2"


[tool.poe.env]
PYTHONPATH = "scripts/"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flakehell]
exclude = [".venv"]
max_line_length = 100
